# gilded-rose-practice

./: .gitignore  GildedRoseRefactoringChecklist.md  README.md  constants.py  enums.py  gilded_rose.py  item.py  pyproject.toml  utils.py
app/: gilded_rose.py  item.py
test/: test_gilded_rose.py  test_item.py  texttest_fixture.py
