[tool.poetry]
name = "gilded_rose"
version = "0.1.0"
description = ""
authors = ["roycehoe <royce@patsnap.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"
black = "^22.12.0"
pytest-cov = "^4.0.0"
pre-commit = "^2.21.0"
pydantic = "^1.10.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
